modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-proc-mount/rendered/test_samples/pods/001-006-allowed-default-procmount.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-default-procmount
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            procMount: Default
