modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-proc-mount/rendered/test_samples/pods/003-004-disallowed-multiple-containers-one-unmasked.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-multiple-containers-one-unmasked
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            procMount: Unmasked
        - command:
            - /bin/sh
            - -c
            - sleep 3600
          image: busybox
          name: sidecar
          securityContext:
            procMount: Default
