modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-proc-mount/rendered/test_samples/pods/005-008-disallowed-initcontainer-unmasked-procmount.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-initcontainer-unmasked-procmount
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            procMount: Default
    initContainers:
        - command:
            - /bin/sh
            - -c
            - echo init
          image: busybox
          name: init
          securityContext:
            procMount: Unmasked
