modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-proc-mount/rendered/test_samples/pods/006-009-disallowed-ephemeralcontainer-unmasked-procmount.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-ephemeralcontainer-unmasked-procmount
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
    ephemeralContainers:
        - image: busybox
          name: debugger
          securityContext:
            procMount: Unmasked
