modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-proc-mount/rendered/test_samples/pods/007-011-disallowed-unmasked-procmount-container.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-unmasked-procmount-container-security-policy
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            procMount: Unmasked
