modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-proc-mount/rendered/test_samples/pods/008-025-allowed-by-exception-procmount-unmasked.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        security.deckhouse.io/security-policy-exception: allow-unmasked
    name: allowed-by-exception-procmount-unmasked
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            procMount: Unmasked
