modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-proc-mount/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-proc-mount
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 006-allowed-default-procmount
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-006-allowed-default-procmount.yaml
        assertions:
          - violations: "no"
      - name: 007-allowed-no-procmount
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-007-allowed-no-procmount.yaml
        assertions:
          - violations: "no"
      - name: 004-disallowed-multiple-containers-one-unmasked
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-004-disallowed-multiple-containers-one-unmasked.yaml
        assertions:
          - violations: "yes"
      - name: 005-disallowed-unmasked-procmount-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-005-disallowed-unmasked-procmount-container.yaml
        assertions:
          - violations: "yes"
      - name: 008-disallowed-initcontainer-unmasked-procmount
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-008-disallowed-initcontainer-unmasked-procmount.yaml
        assertions:
          - violations: "yes"
      - name: 009-disallowed-ephemeralcontainer-unmasked-procmount
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-009-disallowed-ephemeralcontainer-unmasked-procmount.yaml
        assertions:
          - violations: "yes"
  - name: security-policy
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 011-disallowed-unmasked-procmount-container
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-011-disallowed-unmasked-procmount-container.yaml
        assertions:
          - violations: "yes"
  - name: pss-baseline-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 025-allowed-by-exception-procmount-unmasked
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-025-allowed-by-exception-procmount-unmasked-inv-1.yaml
        object: test_samples/pods/008-025-allowed-by-exception-procmount-unmasked.yaml
        assertions:
          - violations: "no"
      - name: 014-021-disallowed-by-exception-procmount-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-014-021-disallowed-by-exception-procmount-mismatch-inv-1.yaml
        object: test_samples/pods/009-014-021-disallowed-by-exception-procmount-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 022-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-022-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 014-020-disallowed-by-exception-multiple-containers-one-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-014-021-disallowed-by-exception-procmount-mismatch-inv-1.yaml
        object: test_samples/pods/011-014-020-disallowed-by-exception-multiple-containers-one-mismatch.yaml
        assertions:
          - violations: "yes"
  - name: security-policy-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 016-023-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/004-016-023-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/012-016-023-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
  - name: security-policy-spe-container
    template: constraint-template.yaml
    constraint: ../constraints/policy_1.yaml
    cases:
      - name: 024-025-allowed-by-container-exception-unmasked
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/005-024-025-allowed-by-container-exception-unmasked-inv-1.yaml
        object: test_samples/pods/013-024-025-allowed-by-container-exception-unmasked.yaml
        assertions:
          - violations: "no"
